[开发] - 增加 LiveData

--- a/component-jetpack/build.gradle
+++ b/component-jetpack/build.gradle
@@ -56,4 +56,13 @@ dependencies {
     api("androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0-alpha02")
     api("androidx.lifecycle:lifecycle-livedata-ktx:2.4.0-alpha02")
     ////////////////////////////////////////////////////////////////////////////////////
+
+
+    ////////////////////////////////////////////////////////////////////////////////////
+    //////         Jetpack                                                          ////
+    ////// 文档：https://developer.android.google.cn/topic/libraries/architecture/   ////
+    ////////////////////////////////////////////////////////////////////////////////////
+    implementation("androidx.paging:paging-runtime:3.0.0")
+    ////////////////////////////////////////////////////////////////////////////////////
+
 }
