--- a/component-jetpack/build.gradle
+++ b/component-jetpack/build.gradle
@@ -4,14 +4,11 @@ plugins {
 }
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.2"
+    compileSdkVersion 31
 
     defaultConfig {
         minSdkVersion 21
-        targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
+        targetSdkVersion 31
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -37,11 +34,11 @@ android {
 
 dependencies {
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.2.1'
-    testImplementation 'junit:junit:4.+'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.6.0"
+    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'com.google.android.material:material:1.4.0'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
@@ -50,11 +47,11 @@ dependencies {
     //////         Kotlin KTX                                                       ////
     //////         文档：https://developer.android.google.cn/kotlin/ktx             ////
     ////////////////////////////////////////////////////////////////////////////////////
-    api("androidx.activity:activity-ktx:1.3.0")
+    api("androidx.activity:activity-ktx:1.4.0")
     api("androidx.fragment:fragment-ktx:1.3.6")
-    api("androidx.lifecycle:lifecycle-runtime-ktx:2.4.0-alpha02")
-    api("androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0-alpha02")
-    api("androidx.lifecycle:lifecycle-livedata-ktx:2.4.0-alpha02")
+    api("androidx.lifecycle:lifecycle-runtime-ktx:2.4.0")
+    api("androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0")
+    api("androidx.lifecycle:lifecycle-livedata-ktx:2.4.0")
     ////////////////////////////////////////////////////////////////////////////////////
 
 
